fix breadcrumb z-index

--- a/css/sass/content/_activity.scss
+++ b/css/sass/content/_activity.scss
@@ -100,6 +100,7 @@
   max-width: $website-width;
   position: relative;
   margin: 0 auto;
+  z-index: 999;
 
   @include breakpoint-max(sm) {
     display: none;
